@@ -1312,7 +1312,7 @@ on some systems or setgid to root or to some other group on others.
 In addition to the default foreground and background colours,
 B<@@RXVT_NAME@@> can display up to 16 colours (8 ANSI colours plus
 high-intensity bold/blink versions of the same). Here is a list of the
-colours with their B<rgb.txt> names.
+colours with their names.
 
 =begin table
 
@@ -1341,6 +1341,14 @@ It is also possible to specify the colour values of B<foreground>,
 B<background>, B<cursorColor>, B<cursorColor2>, B<colorBD>, B<colorUL> as
 a number 0-15, as a convenient shorthand to reference the colour name of
 color0-color15.
+
+If Xft support has been compiled in and as long as Xft/Xrender don't get
+their act together, rxvt-unicode will support C<#ARGB>, C<#AARRGGBB>
+and C<#AAAARRRRGGGGBBBB> colour specifications, in addition to the ones
+provided by X, where the additional A component specifies alpha (opacity)
+values (0 is completely transparent and the maximum is opaque). You
+probably need to specify B<"-depth 32">, too, as X is far from just
+supporting ARGB visuals out of the box.
 
 Note that B<-rv> (B<"reverseVideo: True">) simulates reverse video by
 always swapping the foreground/background colours. This is in contrast to
