@@ -31,7 +31,9 @@
 #endif
 
 extern "C" {
-#include <X11/Intrinsic.h>      /* Xlib, Xutil, Xresource, Xfuncproto */
+#include <X11/Xlib.h>
+#include <X11/Xutil.h>
+#include <X11/Xresource.h>
 }
 
 /*
